gccida/g2/fixup_var_refs_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2416:6: error: use of undeclared identifier 'v24'
rtx *v24; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2420:4: error: expected ';' after expression
rtx v28; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2420:5: error: use of undeclared identifier 'v28'
rtx v28; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2427:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2427:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2429:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2430:4: error: expected ';' after expression
rtx v38; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2430:5: error: use of undeclared identifier 'v38'
rtx v38; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2437:4: error: expected ';' after expression
rtx v45; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2437:5: error: use of undeclared identifier 'v45'
rtx v45; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2440:4: error: expected ';' after expression
rtx v48; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2440:5: error: use of undeclared identifier 'v48'
rtx v48; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2442:4: error: expected ';' after expression
rtx v50; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2442:5: error: use of undeclared identifier 'v50'
rtx v50; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2445:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v53; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2452:4: error: expected ';' after expression
rtx v60; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2452:5: error: use of undeclared identifier 'v60'
rtx v60; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/function.c:2454:4: error: expected ';' after expression
rtx v62; // rdi 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fixup_var_refs_1/src/obj/function.o] Error 1
